[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/objects/emptyblock.png" type="Texture" id=1]
[ext_resource path="res://assets/art/objects/falling.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/FallingBlock.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 1 )

[sub_resource type="Animation" id=4]
resource_name = "falldown"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Block:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Block:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "shackleton"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Block:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, 1 ), Vector2( 0, 0 ), Vector2( 2, -1 ), Vector2( 0, 0 ), Vector2( -2, 1 ), Vector2( 0, 0 ), Vector2( 2, -1 ), Vector2( 0, 0 ) ]
}

[node name="FallingBlock" type="Node2D" groups=[
"resetState",
]]
script = ExtResource( 3 )

[node name="Empty" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
centered = false

[node name="Block" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Area" type="Area2D" parent="."]
position = Vector2( 8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/falldown = SubResource( 4 )
anims/shackleton = SubResource( 3 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CheckTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="CheckTimer" to="." method="_on_CheckTimer_timeout"]
